--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
   <title>Top 51–75 Market Cap + 1H Turnover</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
-    html, body {
-      margin: 0; padding: 0;
-      background-color: black; color: white;
-      font-family: sans-serif;
-      overflow: hidden;
-      width: 100vw; height: 100vh;
-    }
-    body {
-      transform: scale(0.68);
-      transform-origin: top left;
-      width: 133.33%; height: 133.33%;
-      padding: 40px;
-    }
+    :root { --scale: 0.65; }
+
+  html, body {
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    color: white;
+    font-family: sans-serif;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+  }
+  body {
+    transform: scale(var(--scale));
+    transform-origin: top left;
+    /* 역보정: 100% / 0.68 = 147.058823...% */
+    width: calc(100% / var(--scale));
+    height: calc(100% / var(--scale));
+    padding: calc(40px / var(--scale)); /* 시각적 패딩 유지 */
+  }
     #time { margin-bottom: 20px; font-size: 16px; color: #ccc; }
     #countdown { margin-left: 12px; color: #888; }
   </style>
@@ -44,8 +51,8 @@
     const barStartX = 200;     // ← 250 → 200 으로 줄여 막대와 라벨 간격 좁힘
 
     // 시총 막대 / 1시간 거래대금 보조막대 최대 길이
-    const mcBarMaxW   = 650;
-    const turnBarMaxW = 550;
+    const mcBarMaxW   = 520;
+    const turnBarMaxW = 500;
 
     const svg = d3.select("#chart");
     let secondsToNextUpdate = 300; // 5분 주기
