--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     }
 
     function barColor(color1h) {
-      if (color1h === "green") return "#00ff88";
-      if (color1h === "red")   return "#ff3366";
+      if (color1h === "green") return "#afff00";
+      if (color1h === "red")   return "#f73f21";
       return "#777777"; // 미상장/데이터 없음
     }
 
